# predict-ingredient

./: main.py  pyproject.toml
data/: embeddings.pkl  model_amount.pkl  model_ingredient.pkl
prepare/: input_data.json  prepare_data.py
train/: train_model.py
train/data/: prepared_data.json
train/data/old/: quantity_model.pkl
