[tool.poetry]
name = "predict-ingredient"
version = "0.1.0"
description = "A program to either train a model to predict the canonical ingredient and amount needed from free text input, or predict the output from free text."
authors = ["Mustafa Shabib <mshabib@seasonhealth.com>"]
readme = "README.md"
packages = [{include = "predict_ingredient"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
xgboost = "^1.7.6"
word2number = "^1.1"
click = "^8.1.5"
joblib = "^1.3.1"
scikit-learn = "^1.3.0"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
